--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Preemiere\\core-bundle\\": "src/"
+            "Preemiere\\CoreBundle\\": "src/Preemiere/CoreBundle"
         },
         "exclude-from-classmap": ["/tests/"]
     }
