--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,11 +1,11 @@
 services:
     preemiere.core_bundle.type.enum:
-        class: Preemiere\CoreBundle\Form\EnumType
+        class: Grachev\CoreBundle\Form\EnumType
         tags:
             - { name: form.type }
 
     preemiere.core_bundle.event_listener.enum_subscriber:
-        class: Preemiere\CoreBundle\EventListener\EnumSubscriber
+        class: Grachev\CoreBundle\EventListener\EnumSubscriber
         arguments: [ "@config_cache_factory", "%kernel.cache_dir%" ]
         tags:
             - { name: doctrine.event_subscriber, connection: default }
