--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": ">=7.0.0",
         "symfony/form": "^3.0",
         "symfony/dependency-injection": "^3.0",
-        "grachev/core": "^2.2",
+        "grachev/core": "dev-master",
         "symfony/config": "^3.0",
         "symfony/http-kernel": "^3.0",
         "doctrine/orm": "^2.5"
