--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,11 +1,11 @@
 services:
-    grachev.core_bundle.type.enum:
-        class: Grachev\CoreBundle\Form\EnumType
+    grachev.enum_bundle.type.enum:
+        class: Grachev\EnumBundle\Form\EnumType
         tags:
             - { name: form.type }
 
-    grachev.core_bundle.event_listener.enum_subscriber:
-        class: Grachev\CoreBundle\EventListener\EnumSubscriber
+    grachev.enum_bundle.event_listener.enum_subscriber:
+        class: Grachev\EnumBundle\EventListener\EnumSubscriber
         arguments: [ "@config_cache_factory", "%kernel.cache_dir%" ]
         tags:
             - { name: doctrine.event_subscriber, connection: default }
