--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.0",
-        "symfony/form": "^3.0",
-        "symfony/dependency-injection": "^3.0",
+        "symfony/form": "^2.7|^3.0",
+        "symfony/dependency-injection": "^2.7|^3.0",
         "grachev/enum": "^2.0",
-        "symfony/config": "^3.0",
-        "symfony/http-kernel": "^3.0",
+        "symfony/config": "^2.7|^3.0",
+        "symfony/http-kernel": "^2.7|^3.0",
         "doctrine/orm": "^2.5"
     },
     "autoload": {
