--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.0",
+        "grachev/enum": "^1.0",
+        "doctrine/orm": "^2.5",
         "symfony/form": "^2.7|^3.0",
         "symfony/dependency-injection": "^2.7|^3.0",
-        "grachev/enum": "^2.0",
         "symfony/config": "^2.7|^3.0",
-        "symfony/http-kernel": "^2.7|^3.0",
-        "doctrine/orm": "^2.5"
+        "symfony/http-kernel": "^2.7|^3.0"
     },
     "autoload": {
         "psr-4": {
